# EpaperClock

./: .gitmodules  CMakeLists.txt  README.md  README_C++.md  README_C++.txt  README_Fuses.md  README_Fuses.txt  coordinates2d.cpp  coordinates2d.hpp  glwidget.cpp  helper.cpp  helper.h  main.cpp  renderer2d.cpp  renderer2d.hpp  renderer2dextended.hpp  window.cpp
EpaperClock/: CMakeLists.txt  EpaperClock.cpp  EpaperClock.hpp  EpaperClock.ino  main.cpp
development/Blink/: Blink.ino
development/ButtonTest/: ButtonTest.ino
development/ClockSimulation/: CMakeLists.txt  constexprAbs.hpp  coordinates2d.hpp  glwidget.cpp  glwidget.h  helper.cpp  helper.hpp  renderer2d.cpp  renderer2d.hpp  renderer2dclockgui.hpp  renderer2dextended.cpp  renderer2dextended.hpp  window.cpp  window.h
development/DS3231_echo_time/: DS3231_echo_time.ino
development/Interrupts/: Interrupts.ino
documents/: 2.7inch e-Paper HAT - Waveshare Wiki.html  AVR Baud Rate Tables.html  ArduinoUnoTimerToPin.txt  Boot Reset Vector - Mikrocontroller.net.html  Gammon Forum Electronics Microprocessors Interrupts.html  avr-libc (avr_sleep.h) Power Management and Sleep Modes.html  oscValues.py
documents/2.7inch e-Paper HAT - Waveshare Wiki_files/: thumb_013.html
documents/Boot Reset Vector - Mikrocontroller.net_files/: application-80217b63f820284f9ad12fbab3d2e0d5e6dee9ec9eaf1905b.js  js  js_002  screen-5a55ef2d1f550293ce04149ad54d64da68e54c94c19c163a3a0b7.css
